--- a/Web/Properties/launchSettings.json
+++ b/Web/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     },
     "Xiphos - Kestrel": {
       "commandName": "Project",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
         "ASPNETCORE_HOSTINGSTARTUPASSEMBLIES": "Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation"
